# pulseaudio-modules-droid-30

./: configure.ac
debian/: control  pulseaudio-modules-droid-24-dev.install  pulseaudio-modules-droid-28-dev.install  pulseaudio-modules-droid-28.install  pulseaudio-modules-droid-30.install  rules
src/common/: Makefile.am  droid-util.c  libdroid-util.pc.in
src/common/include/droid/: droid-util.h
src/droid/: Makefile.am  droid-extevdev.c  droid-extevdev.h  droid-sink.c  droid-source.c  module-droid-card.c  module-droid-sink.c
